@@ -272,3 +272,10 @@ max_queue_files 250
 
 # Update parent from the agent xml
 #update_parent 1
+
+# This enable realtime reverse geocoding using Google Maps public api.
+# This requires internet access, and could have performance penalties processing GIS
+# information due the connetion needed to resolve all GIS input.
+#
+# google_maps_description 1
+
