@@ -1,3 +1,10 @@
+2011-02-07  Sancho Lerena <slerena@artica.es>
+
+	* pandora_server/conf/pandora_server.conf,
+	pandora_server/lib/PandoraFMS/Config.pm,
+	pandora_server/lib/PandoraFMS/DataServer.pm: Added support for reverse geocoding using
+	GoogleMaps api. 
+
 2011-01-31  Sergio Martin <sergio.martin@artica.es>
 
 	* lib/PandoraFMS/DB.pm: Fixed a codification bug with
